--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-streamlit
-json
-datetime
+streamlit==1.14.1
+numpy==1.23.5
+matplotlib==3.6.3
+seaborn==0.12.2
+scikit-learn==1.1.3
+xgboost==1.7.3
+tensorflow==2.11.0
+opencv-python==4.6.0.66
+pypdf2==2.11.1
+langchain==0.0.59
